@@ -32,14 +32,14 @@ doc/*.txt
 doc/xml
 greeters/ldm-gtk-greeter
 greeters/ldm-webkit-greeter
-libldmgreeter-gobject/*.gir
-libldmgreeter-gobject/*.typelib
-libldmgreeter-gobject/libldmgreeter-gobject-0.pc
-libldmgreeter-qt/libldmgreeter-qt-0.pc
-libldmgreeter-qt/displayinterface.cpp
-libldmgreeter-qt/displayinterface.h
-libldmgreeter-qt/usermanagerinterface.cpp
-libldmgreeter-qt/usermanagerinterface.h       
+liblightdm-gobject/*.gir
+liblightdm-gobject/*.typelib
+liblightdm-gobject/liblightdm-gobject-0.pc
+liblightdm-qt/liblightdm-qt-0.pc
+liblightdm-qt/displayinterface.cpp
+liblightdm-qt/displayinterface.h
+liblightdm-qt/usermanagerinterface.cpp
+liblightdm-qt/usermanagerinterface.h       
 po/POTFILES
 po/stamp-it
 src/display-glue.h
