@@ -2,18 +2,18 @@ DOC_MODULE=ldmgreeter
 
 DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.sgml
 
-DOC_SOURCE_DIR=$(top_srcdir)/libldmgreeter-gobject
+DOC_SOURCE_DIR=$(top_srcdir)/liblightdm-gobject
 
-HFILE_GLOB=$(top_srcdir)/libldmgreeter-gobject/*.h
-CFILE_GLOB=$(top_srcdir)/libldmgreeter-gobject/*.c
+HFILE_GLOB=$(top_srcdir)/liblightdm-gobject/*.h
+CFILE_GLOB=$(top_srcdir)/liblightdm-gobject/*.c
 
 INCLUDES = \
-	$(LIBLDMGREETER_GOBJECT_CFLAGS) \
-	-I$(top_srcdir)/libldmgreeter-gobject
+	$(LIBLIGHTDM_GOBJECT_CFLAGS) \
+	-I$(top_srcdir)/liblightdm-gobject
 
 GTKDOC_LIBS = \
-	$(LIBLDMGREETER_GOBJECT_LIBS) \
-	$(top_builddir)/libldmgreeter-gobject/libldmgreeter-gobject.la
+	$(LIBLIGHTDM_GOBJECT_LIBS) \
+	$(top_builddir)/liblightdm-gobject/liblightdm-gobject.la
 
 MKDB_OPTIONS=--sgml-mode --output-format=xml --name-space=ldm
 
