@@ -7,18 +7,18 @@ if HAVE_WEBKIT_GREETER
 libexec_PROGRAMS += ldm-webkit-greeter
 endif
 
-LIBGREETER_LIB = $(top_builddir)/libldmgreeter-gobject/libldmgreeter-gobject.la
-LIBGREETER_CFLAGS = \
-	-I$(top_srcdir)/libldmgreeter-gobject
-LIBGREETER_LDADD = \
-	-L$(top_builddir)/libldmgreeter-gobject \
-	-lldmgreeter-gobject
+LIBLIGHTDM_LIB = $(top_builddir)/liblightdm-gobject/liblightdm-gobject.la
+LIBLIGHTDM_CFLAGS = \
+	-I$(top_srcdir)/liblightdm-gobject
+LIBLIGHTDM_LDADD = \
+	-L$(top_builddir)/liblightdm-gobject \
+	-llightdm-gobject
 
 ldm_gtk_greeter_SOURCES = \
 	ldm-gtk-greeter.c
 
 ldm_gtk_greeter_CFLAGS = \
-	$(LIBGREETER_CFLAGS) \
+	$(LIBLIGHTDM_CFLAGS) \
 	$(LIGHTDM_GTK_GREETER_CFLAGS) \
 	$(WARN_CFLAGS) \
 	-DVERSION=\"$(VERSION)\" \
@@ -27,14 +27,14 @@ ldm_gtk_greeter_CFLAGS = \
 	-DLIGHTDM_GTK_GREETER_BINARY=\"ldm-gtk-greeter\"
 
 ldm_gtk_greeter_LDADD = \
-	$(LIBGREETER_LDADD) \
+	$(LIBLIGHTDM_LDADD) \
 	$(LIGHTDM_GTK_GREETER_LIBS)
 
 ldm_webkit_greeter_SOURCES = \
 	ldm-webkit-greeter.c
 
 ldm_webkit_greeter_CFLAGS = \
-	$(LIBGREETER_CFLAGS) \
+	$(LIBLIGHTDM_CFLAGS) \
 	$(LIGHTDM_WEBKIT_GREETER_CFLAGS) \
 	$(WARN_CFLAGS) \
 	-DVERSION=\"$(VERSION)\" \
@@ -43,7 +43,7 @@ ldm_webkit_greeter_CFLAGS = \
 	-DLIGHTDM_WEBKIT_GREETER_BINARY=\"ldm-webkit-greeter\"
 
 ldm_webkit_greeter_LDADD = \
-	$(LIBGREETER_LDADD) \
+	$(LIBLIGHTDM_LDADD) \
 	$(LIGHTDM_WEBKIT_GREETER_LIBS)
 
 DISTCLEANFILES = \
