@@ -1,24 +1,24 @@
-lib_LTLIBRARIES = libldmgreeter-gobject.la
+lib_LTLIBRARIES = liblightdm-gobject.la
 
-libldmgreeter_gobjectinclude_HEADERS = \
+liblightdm_gobjectinclude_HEADERS = \
 	greeter.h \
 	language.h \
 	layout.h \
 	session.h \
 	user.h
-libldmgreeter_gobjectincludedir=$(includedir)/lightdm-gobject-0/lightdm
+liblightdm_gobjectincludedir=$(includedir)/lightdm-gobject-0/lightdm
 
-libldmgreeter_gobject_la_LIBADD = $(LIBLDMGREETER_GOBJECT_LIBS)
-libldmgreeter_gobject_la_CFLAGS = $(LIBLDMGREETER_GOBJECT_CFLAGS) \
+liblightdm_gobject_la_LIBADD = $(LIBLIGHTDM_GOBJECT_LIBS)
+liblightdm_gobject_la_CFLAGS = $(LIBLIGHTDM_GOBJECT_CFLAGS) \
 	-DXSESSIONS_DIR=\"$(XSESSIONS_DIR)\"
 
-libldmgreeter_gobject_la_SOURCES= \
+liblightdm_gobject_la_SOURCES= \
 	greeter.c \
 	language.c \
 	layout.c \
 	session.c \
 	user.c \
-	$(libldmgreeter_gobjectinclude_HEADERS)
+	$(liblightdm_gobjectinclude_HEADERS)
 
 if HAVE_INTROSPECTION
 
@@ -28,11 +28,11 @@ INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)
 
 INTROSPECTION_GIRS = LightDMGreeter-0.gir
 
-LightDMGreeter-0.gir: libldmgreeter-gobject.la
+LightDMGreeter-0.gir: liblightdm-gobject.la
 LightDMGreeter_0_gir_INCLUDES = GObject-2.0
 LightDMGreeter_0_gir_CFLAGS = $(INCLUDES) --identifier-prefix=Ldm
-LightDMGreeter_0_gir_LIBS = libldmgreeter-gobject.la
-LightDMGreeter_0_gir_FILES = $(libldmgreeter_gobject_la_SOURCES)
+LightDMGreeter_0_gir_LIBS = liblightdm-gobject.la
+LightDMGreeter_0_gir_FILES = $(liblightdm_gobject_la_SOURCES)
 
 girdir = $(datadir)/gir-1.0
 gir_DATA = LightDMGreeter-0.gir
@@ -43,7 +43,7 @@ typelib_DATA = LightDMGreeter-0.typelib
 endif
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libldmgreeter-gobject-0.pc
+pkgconfig_DATA = liblightdm-gobject-0.pc
 
 DISTCLEANFILES = \
 	Makefile.in \
