@@ -4,6 +4,7 @@ Overview of changes in lightdm 0.2.1
     * Rename libldmgreeter to libldmgreeter-gobject
     * Add libldmgreeter-qt (David Edmundson)
     * Fix gobject-introspection build
+    * Renamed libldmgreeter to liblightdm
 
 Overview of changes in lightdm 0.2.0
 
